crates/kotlin-syntax/tests/snapshots/parser_snapshots__parse_class_with_modified_companion_object.snap
---
source: crates/kotlin-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class C {
    private companion object {
        fun f() = 1
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "C"
WHITESPACE " "
L_BRACE "{"
NEWLINE "\n"
WHITESPACE "    "
IDENTIFIER "private"
WHITESPACE " "
IDENTIFIER "companion"
WHITESPACE " "
OBJECT_KW "object"
WHITESPACE " "
L_BRACE "{"
NEWLINE "\n"
WHITESPACE "        "
FUN_KW "fun"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
WHITESPACE "    "
R_BRACE "}"
NEWLINE "\n"
R_BRACE "}"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..69
  IMPORT_LIST@0..0
  CLASS_DECL@0..68
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "C"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..68
      L_BRACE@8..9 "{"
      NEWLINE@9..10 "\n"
      WHITESPACE@10..14 "    "
      COMPANION_OBJECT@14..66
        MODIFIER_LIST@14..21
          IDENTIFIER@14..21 "private"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..31 "companion"
        WHITESPACE@31..32 " "
        OBJECT_KW@32..38 "object"
        WHITESPACE@38..39 " "
        CLASS_BODY@39..66
          L_BRACE@39..40 "{"
          NEWLINE@40..41 "\n"
          WHITESPACE@41..49 "        "
          FUNCTION_DECL@49..60
            FUN_KW@49..52 "fun"
            WHITESPACE@52..53 " "
            IDENTIFIER@53..54 "f"
            VALUE_PARAMETERS@54..56
              L_PAREN@54..55 "("
              R_PAREN@55..56 ")"
            WHITESPACE@56..57 " "
            EQUAL@57..58 "="
            WHITESPACE@58..59 " "
            PRIMARY_EXPRESSION@59..60
              INTEGER_LITERAL@59..60 "1"
          NEWLINE@60..61 "\n"
          WHITESPACE@61..65 "    "
          R_BRACE@65..66 "}"
      NEWLINE@66..67 "\n"
      R_BRACE@67..68 "}"
  NEWLINE@68..69 "\n"
