crates/kotlin-syntax/tests/snapshots/parser_snapshots__parse_empty_file.snap
---
source: crates/kotlin-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:

TOKENS:
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..0
  IMPORT_LIST@0..0
