crates/kotlin-syntax/tests/snapshots/parser_snapshots__parse_error_ending.snap
---
source: crates/kotlin-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Unclosed {
    val x = 1

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Unclosed"
WHITESPACE " "
L_BRACE "{"
NEWLINE "\n"
WHITESPACE "    "
VAL_KW "val"
WHITESPACE " "
IDENTIFIER "x"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
INTEGER_LITERAL "1"
NEWLINE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..31
  IMPORT_LIST@0..0
  CLASS_DECL@0..31
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..14 "Unclosed"
    WHITESPACE@14..15 " "
    CLASS_BODY@15..31
      L_BRACE@15..16 "{"
      NEWLINE@16..17 "\n"
      WHITESPACE@17..21 "    "
      PROPERTY_DECL@21..31
        VAL_KW@21..24 "val"
        WHITESPACE@24..25 " "
        VARIABLE_DECLARATION@25..26
          IDENTIFIER@25..26 "x"
        WHITESPACE@26..27 " "
        EQUAL@27..28 "="
        WHITESPACE@28..29 " "
        PRIMARY_EXPRESSION@29..30
          INTEGER_LITERAL@29..30 "1"
        NEWLINE@30..31 "\n"
      MISSING@31..31
